# BrowserStack_Solution

./: README.md  main.py  pyproject.toml
utils/: Idata.py  counter.py  translate.py  web_scrapping.py
