[project]
name = "browserstack-solution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-translate>=3.21.1",
    "googletrans>=4.0.2",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "selenium>=4.34.0",
]
